--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             </ul>
         </nav>
         <div class="header">
-            <img src="img/index/Hero Section.png" alt="部落格作者大頭照" />
+            <div class="header-img">
+                <img src="img/index/Hero Section.png" alt="部落格作者大頭照" />
+            </div>
             <div class="header-content blue">
                 <h1 class="fs-6 fw-black header-title">Alyse Wang</h1>
                 <h2 class="fs-4 fw-bold">前端工程師 & 職涯諮詢師</h2>
@@ -265,7 +267,7 @@
     <footer>
         <div class="container border-b-hr">
             <div class="newsletter">
-                <img src="img/index/Hero Section.png" alt="部落格作者大頭照" />
+                <div class="newsletter-img"><img src="img/index/Hero Section.png" alt="部落格作者大頭照" /></div>
                 <div class="newsletter-content">
                     <div class="card black">
                         <h3 class="index-title">訂閱電子報</h3>
