--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="about__desc_content">
                     <p>嗨，我是Alyse</p>
                     <p>一名深耕前端技術的工程師。</p>
-                    <p>擅長 React、Vue 等框架，同時熱愛為轉職與新手工程師提供職涯指導。<br>
+                    <p>擅長 React、Vue 等框架，同時熱愛為轉職與新手工程師提供職涯指導。
                         邀請你與我一起，開啟更具潛能的程式與職涯之旅！</p>
                     <ul class="social">
                         <li><img src="img/index/onlyIcon.png" alt=""></li>
