--- a/blog.html
+++ b/blog.html
@@ -272,7 +272,7 @@
 
     <footer class="container">
         <div class="footer">
-            <a href="mailto:alysewang@hexschool.com" class="mail fw-medium black">alysewang@hexschool.com</a>
+            <a href="mailto:alysewang@hexschool.com" class="mail fw-medium">alysewang@hexschool.com</a>
             <ul class="social">
                 <li>
                     <a href="#"><img src="img/index/onlyIcon.png" alt="youtube" /></a>
