--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <h1 class="fs-6 fw-black header-title">Alyse Wang</h1>
                 <h2 class="fs-4 fw-bold">前端工程師 & 職涯諮詢師</h2>
             </div>
-            
-            </div>
-                <div class="about">
-                 <div class="about__desc fs-4 black">
-                 <div class="about__desc_content">
+
+        </div>
+        <div class="about">
+            <div class="about__desc fs-4">
+                <div class="about__desc_content">
                     <p>嗨，我是Alyse</p>
                     <p>一名深耕前端技術的工程師。</p>
                     <p>擅長 React、Vue 等框架，同時熱愛為轉職與新手工程師提供職涯指導。
@@ -45,10 +45,10 @@
                         <li><img src="img/index/icons8-linkedin.png" alt=""></li>
                     </ul>
                 </div>
-        </div>
+            </div>
         </div>
 
-      
+
         </div>
     </header>
 
@@ -61,29 +61,29 @@
                 <div class="service_content">
                     <img src="img/index/photo.png" alt="履歷健檢">
                     <div class="service_content_text">
-                        <h2 class="fs-4 fw-bold black card-title">履歷健檢</h2>
-                        <p>履歷是打開機會之門的第一步。讓我協助你突顯專業技術與核心能力，並透過簡短模擬面試為你加分，讓面試官第一眼就被你吸引。</p>
+                        <h2 class="fs-4 fw-bold card-title">履歷健檢</h2>
+                        <p class="grey">履歷是打開機會之門的第一步。讓我協助你突顯專業技術與核心能力，並透過簡短模擬面試為你加分，讓面試官第一眼就被你吸引。</p>
                     </div>
                 </div>
                 <div class="service_content row-r">
                     <img src="img/index/photo2.png" alt="線上諮詢">
                     <div class="service_content_text">
-                        <h2 class="fs-4 fw-bold black card-title">線上諮詢</h2>
-                        <p>想快速解決前端學習瓶頸，或需要專業職涯指引？透過線上一對一諮詢，我將協助你更有方向地邁進。</p>
+                        <h2 class="fs-4 fw-bold card-title">線上諮詢</h2>
+                        <p class="grey">想快速解決前端學習瓶頸，或需要專業職涯指引？透過線上一對一諮詢，我將協助你更有方向地邁進。</p>
                     </div>
                 </div>
                 <div class="service_content">
                     <img src="img/index/photo3.png" alt="網頁開發">
                     <div class="service_content_text">
-                        <h2 class="fs-4 fw-bold black card-title">網頁開發</h2>
-                        <p>想打造高效能、具美感的網站？我提供從需求訪談到架構實作的一站式服務，讓你的品牌與產品在線上脫穎而出。</p>
+                        <h2 class="fs-4 fw-bold card-title">網頁開發</h2>
+                        <p class="grey">想打造高效能、具美感的網站？我提供從需求訪談到架構實作的一站式服務，讓你的品牌與產品在線上脫穎而出。</p>
                     </div>
                 </div>
                 <div class="service_content row-r">
                     <img src="img/index/photo4.png" alt="企業內訓">
                     <div class="service_content_text">
-                        <h2 class="fs-4 fw-bold black card-title">企業內訓</h2>
-                        <p>想讓團隊快速掌握前端最新技術或優化現有專案流程？我可協助打造專業、實用的企業內訓課程，一次解決團隊痛點。</p>
+                        <h2 class="fs-4 fw-bold card-title">企業內訓</h2>
+                        <p class="grey">想讓團隊快速掌握前端最新技術或優化現有專案流程？我可協助打造專業、實用的企業內訓課程，一次解決團隊痛點。</p>
                     </div>
                 </div>
             </section>
@@ -160,8 +160,8 @@
             <div class="container border-b-hr">
                 <div class="success-cases">
                     <div class="index-title">
-                        <h2 class="fw-bold black">職涯諮詢</h2>
-                        <h2 class="fw-bold black">成功案例</h2>
+                        <h2 class="fw-bold">職涯諮詢</h2>
+                        <h2 class="fw-bold">成功案例</h2>
                     </div>
                     <div class="success-cases-content">
                         <div class="img-box">
