--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 React 核心概念，真正把理論應用在實際專案中。
                             </p>
                         </div>
-                        <div class="blog-read"><a href="#">閱讀內文</a></div>
+                        <div class="blog-read"><a href="article.html">閱讀內文</a></div>
                     </li>
                     <li>
                         <img src="img/blog/photo1.png" alt="前端作品集打造指南：讓你的專案成為履歷亮點" />
@@ -131,7 +131,7 @@
                                 對正在求職的前端工程師而言，作品集往往是第一個「說話」的利器。當面試官瀏覽你的網頁作品時，能夠快速了解你的程式邏輯、設計感以及解決問題的思路。我在協助多位同學優化履歷與作品集的過程中，總結出一些關鍵要素，分享給正在打造、升級作品集的你。
                             </p>
                         </div>
-                        <div class="blog-read"><a href="#">閱讀內文</a></div>
+                        <div class="blog-read"><a href="article.html">閱讀內文</a></div>
                     </li>
                     <li>
                         <img src="img/blog/photo2.png" alt="CSS 魔法大揭密：排版與設計的三大關鍵技巧" />
@@ -149,7 +149,7 @@
                                 CSS，打造兼具美感與功能性的網頁。
                             </p>
                         </div>
-                        <div class="blog-read"><a href="#">閱讀內文</a></div>
+                        <div class="blog-read"><a href="article.html">閱讀內文</a></div>
                     </li>
             </section>
         </div>
