--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
           <li><a href="blog.html">部落格</a></li>
         </ul>
       </nav>
-      <div class="header">
+      <div class="header blog-header">
         <div class="header-img">
           <img src="img/index/Hero Section.png" alt="部落格作者大頭照" />
         </div>
