--- a/blog.html
+++ b/blog.html
@@ -19,11 +19,11 @@
           <li><a href="blog.html">部落格</a></li>
         </ul>
       </nav>
-      <div class="header blog-header">
+      <div class="header">
         <div class="header-img">
           <img src="img/index/Hero Section.png" alt="部落格作者大頭照" />
         </div>
-        <div class="header-content blue">
+        <div class="header-content blue blog-header">
           <h1 class="fs-6 fw-black header-title">BLOG</h1>
           <h2 class="fs-4 fw-bold">前端工程師 & 職涯諮詢師</h2>
         </div>
