--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
         </div>
         <div class="about">
-            <div class="about__desc about-desc-fs">
-                <div class="about__desc_content">
+            <div class="about__desc">
+                <div class="about__desc_content about-desc-fs">
                     <p>嗨，我是Alyse</p>
                     <p>一名深耕前端技術的工程師。</p>
                     <p>擅長 React、Vue 等框架，同時熱愛為轉職與新手工程師提供職涯指導。
@@ -289,7 +289,7 @@
                                 <div class="text">
                                     <div>
                                         <span class="mail-line fs-32">alysewang@hexschool.com</span>
-                                        <span >合作洽談</span>
+                                        <span>合作洽談</span>
                                     </div>
                                 </div>
                                 <span class="material-symbols-outlined">
