修改首頁輪播圖 HTML 結構

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                     </p>
                     </div>
                     <div class="card-read"><a href="article.html">閱讀內文</a></div> 
-                </li>
-                <!-- 多個 slide -->
-                <li class="swiper-slide">
+                  </li>
+                  <!-- 多個 slide -->
+                  <li class="swiper-slide">
                     <img
                     src="img/blog/photo3.png"
                     alt="前端面試不再慌：破解常見提問的三大策略"
@@ -143,7 +143,7 @@
                     </p>
                   </div>
                   <div class="card-read"><a href="article.html">閱讀內文</a></div>
-                </li>
+                   </li>
                       <!-- 多個 slide -->
                       <li class="swiper-slide">
                         <img
@@ -181,7 +181,7 @@
               <h2 class="fs-28 card-title">
                 前端轉職必讀：從自學者到工程師的心路歷程
               </h2>
-              <p class="cardg-text">
+              <p class="card-text">
                 能夠憑藉自學進入前端領域，聽起來令人振奮，但實際過程中可能遇到的挫折與疑慮，卻常常令人猶豫。回想當初我也是對程式一竅不通，卻在興趣的驅使下毅然踏上自學之路。今天想透過這篇文章，分享我的轉職經驗和一些調適心態的秘訣，盼能為有心投入前端領域的你提供一些力量與方向。
               </p>
             </div>
@@ -195,6 +195,7 @@
               </div>
               <div class="swiper-button-next">
                 <i class="fa-solid fa-arrow-right"></i>
+
               </div>
             </div>
 
@@ -246,7 +247,7 @@
                                 </ul>
                             </div>
                             <span class="hr"></span>
-                            <div class="blog-read"><a href="#">前往聆聽 podcast</a></div>
+                            <div class="success-card"><a href="#">前往聆聽 podcast</a></div>
                         </li>
                         <li class="success-stories-card">
                             <img src="img/index/people2.png" alt="轉職迷茫到明確學習規劃">
@@ -263,7 +264,7 @@
                                 </ul>
                             </div>
                             <span class="hr"></span>
-                            <div class="blog-read"><a href="#">前往聆聽 podcast</a></div>
+                            <div class="success-card"><a href="#">前往聆聽 podcast</a></div>
                         </li>
                         <li class="success-stories-card">
                             <img src="img/index/people3.png" alt="面試緊張到從容應對">
@@ -280,7 +281,7 @@
                                 </ul>
                             </div>
                             <span class="hr"></span>
-                            <div class="blog-read"><a href="#">前往聆聽 podcast</a></div>
+                            <div class="success-card"><a href="#">前往聆聽 podcast</a></div>
                         </li>
                         <li class="success-stories-card">
                             <img src="img/index/people4.png" alt="面試緊張到從容應對">
@@ -297,7 +298,7 @@
                                 </ul>
                             </div>
                             <span class="hr"></span>
-                            <div class="blog-read"><a href="#">前往聆聽 podcast</a></div>
+                            <div class="success-card"><a href="#">前往聆聽 podcast</a></div>
                         </li>
                     </ul>
                 </div>
@@ -313,7 +314,7 @@
             <div class="newsletter">
                 <div class="newsletter-img"><img src="img/index/Hero Section.png" alt="部落格作者大頭照" /></div>
                 <div class="newsletter-content">
-                    <div class="card black">
+                    <div class="newsletter-card black">
                         <h3 class="index-title fw-bold mb-24 fs-64">訂閱電子報</h3>
                         <p class=" fs-20">立即訂閱，搶先掌握<span class="blue">前端 x 職涯</span>的獨家資訊！</p>
                         <div class="input-group">
