--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/all.css" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-  <title>BLOG</title>
+  <meta name="google-site-verification" content="nEzTaG_jdhihS-yTgWM_GHH7laOk9A3H6P5sVirUKaM" />
+  <title>前端工程師&職涯諮詢師BLOG-Alyse Wang</title>
 </head>
 
 <body>
