--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_forward" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
-    <title>About-Alyse Wang</title>
+    <meta name="google-site-verification" content="nEzTaG_jdhihS-yTgWM_GHH7laOk9A3H6P5sVirUKaM" />
+    <title>前端工程師&職涯諮詢師-Alyse Wang</title>
 </head>
 
 <body>
