--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <meta name="google-site-verification" content="nEzTaG_jdhihS-yTgWM_GHH7laOk9A3H6P5sVirUKaM" />
     <title>前端工程師&職涯諮詢師-Alyse Wang</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DFC74E1CR7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DFC74E1CR7');
+</script>
 </head>
 
 <body>
