--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <meta name="google-site-verification" content="nEzTaG_jdhihS-yTgWM_GHH7laOk9A3H6P5sVirUKaM" />
   <title>前端工程師&職涯諮詢師BLOG-Alyse Wang</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DFC74E1CR7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DFC74E1CR7');
+</script>
 </head>
 
 <body>
