--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                 <p class="fw-bold card_vector">
                                     期待在下一個新機會中，我能與你一起攜手邁向更高峰！
                                 </p>
-                                <div class="blue-btn btn-w"><a href="#">立即預約諮詢</a></div>
+                                <div class="blue-btn btn-w"><a href="#address">立即預約諮詢</a></div>
                             </div>
                         </div>
                     </div>
