--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             </ul>
         </nav>
         <div class="header">
+            <div class="header-warp">
             <div class="header-img">
-                <img src="img/index/Hero Section.png" alt="部落格作者大頭照" />
             </div>
-            <div class="header-content blue header-bg-pb">
-                <h1 class="fs-120 fw-black header-title">Alyse Wang</h1>
+            <div class="header-content blue header-text" >
+                <h1 class="fs-120 fw-black">Alyse Wang</h1>
                 <h2 class="fs-28 fw-bold">前端工程師 & 職涯諮詢師</h2>
             </div>
-
+        </div>
         </div>
         <div class="about">
             <div class="about__desc">
@@ -312,7 +312,8 @@
     <footer>
         <div class="container border-b-hr">
             <div class="newsletter">
-                <div class="newsletter-img"><img src="img/index/Hero Section.png" alt="部落格作者大頭照" /></div>
+                <div class="newsletter-warp">
+                <div class="newsletter-img"></div>
                 <div class="newsletter-content">
                     <div class="newsletter-card black">
                         <h3 class="index-title fw-bold mb-24 fs-64">訂閱電子報</h3>
@@ -324,6 +325,7 @@
                         <div class="blue-btn btn-w"><a href="#">啟動訂閱</a></div>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
 
