社群按鈕調整

--- a/article.html
+++ b/article.html
@@ -270,26 +270,11 @@
           >alysewang@hexschool.com</a
         >
         <ul class="social">
-          <li>
-            <a href="#"><img src="img/index/onlyIcon.png" alt="youtube" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="img/index/onlyIcon-1.png" alt="podcast" /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="img/index/onlyIcon-2.png" alt="facebook"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="img/index/onlyIcon-3.png" alt="instagram"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="img//index/icons8-linkedin.png" alt="linkedin"
-            /></a>
+        <li><a href="#"><img src="img/index/onlyIcon.png" alt="youtube職涯諮詢室"></a></li>
+                        <li><a href="#"><img src="img/index/onlyIcon-1.png" alt="podcast職涯諮詢室"></a></li>
+                        <li><a href="#"><img src="img/index/onlyIcon-2.png" alt="Facebook前端社群"></a></li>
+                       <li><a href="#"><img src="img/index/icons8-linkedin.png" alt="linkedin職涯交流"></a></li>
+                        <li><a href="#"><img src="img/index/onlyIcon-3.png" alt="Instagram日常分享"></a></li>
           </li>
         </ul>
       </div>
