--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/all.css" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_forward" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <meta name="google-site-verification" content="nEzTaG_jdhihS-yTgWM_GHH7laOk9A3H6P5sVirUKaM" />
     <title>前端工程師&職涯諮詢師-Alyse Wang</title>
@@ -49,18 +47,14 @@
                     <p>擅長 React、Vue 等框架，同時熱愛為轉職與新手工程師提供職涯指導。
                         邀請你與我一起，開啟更具潛能的程式與職涯之旅！</p>
                     <ul class="social">
-                        <li><img src="img/index/onlyIcon.png" alt=""></li>
-                        <li><img src="img/index/onlyIcon-1.png" alt=""></li>
-                        <li><img src="img/index/onlyIcon-2.png" alt=""></li>
-                        <li><img src="img/index/onlyIcon-3.png" alt=""></li>
-                        <li><img src="img/index/onlyIcon-4.png" alt=""></li>
-                        <li><img src="img/index/icons8-linkedin.png" alt=""></li>
+                     <li><a href="#"><img src="img/index/onlyIcon.png" alt="youtube職涯諮詢室"></a></li>
+                        <li><a href="#"><img src="img/index/onlyIcon-1.png" alt="podcast職涯諮詢室"></a></li>
+                        <li><a href="#"><img src="img/index/onlyIcon-2.png" alt="Facebook前端社群"></a></li>
+                       <li><a href="#"><img src="img/index/icons8-linkedin.png" alt="linkedin職涯交流"></a></li>
+                        <li><a href="#"><img src="img/index/onlyIcon-3.png" alt="Instagram日常分享"></a></li>
                     </ul>
                 </div>
             </div>
-        </div>
-
-
         </div>
     </header>
 
@@ -445,5 +439,4 @@
         });
     </script>
 </body>
-
 </html>
