--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="header-img">
             </div>
             <div class="header-content blue header-text" >
-                <h1 class="fs-120 fw-black">Alyse Wang</h1>
+                <h1 class="fs-120 fw-black mb-12">Alyse Wang</h1>
                 <h2 class="fs-28 fw-bold">前端工程師 & 職涯諮詢師</h2>
             </div>
         </div>
@@ -62,7 +62,8 @@
     <!-- 服務 -->
     <main>
         <div class="container border-b-hr">
-            <section class="service">
+            <section class="service-warp">
+                <div  class="service">
                 <h2 class="index-title fw-bold mb-24 fs-64">專業服務與方案</h2>
                 <div class="service_content">
                     <img src="img/index/photo.png" alt="履歷健檢">
@@ -92,11 +93,12 @@
                         <p class="grey">想讓團隊快速掌握前端最新技術或優化現有專案流程？我可協助打造專業、實用的企業內訓課程，一次解決團隊痛點。</p>
                     </div>
                 </div>
-            </section>
-            <a href="#address" class="cta">
+                </div>
+                            <a href="#address" class="cta">
                 <span class="cta-text fs-28 fw-bold">聯繫我，取得更多資訊！</span>
                 <img src="img/icon/Frame 18.png" alt="箭頭">
             </a>
+            </section>
         </div>
         <!-- 部落格輪播 -->
         <section>
