--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
           </div>
         </div>
       </div>
-      <article class="banner">
+      <article class="banner border-b-hr">
         <div class="banner-warp">
           <div class="banner-img"></div>
           <div class="banner-content">
