--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
           <li><a href="blog.html">部落格</a></li>
         </ul>
       </nav>
-      <div class="header blog">
+      <div class="header blog border-b-hr">
         <div class="header-warp">
           <div class="header-img"></div>
           <div class="header-content blue header-text">
