--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
                     </div>
                 </div>
                 </div>
-                            <a href="#address" class="cta">
+                 <a href="#address" class="cta">
                 <span class="cta-text fs-28 fw-bold">聯繫我，取得更多資訊！</span>
-                <img src="img/icon/Frame 18.png" alt="箭頭">
+                <span class="cta-button-icon">  <i class="fa-solid fa-arrow-right"></i></i></span>
+                
             </a>
             </section>
         </div>
