--- a/index.html
+++ b/index.html
@@ -66,28 +66,36 @@
                 <div  class="service">
                 <h2 class="index-title fw-bold mb-24 fs-64">專業服務與方案</h2>
                 <div class="service_content">
+                    <div class="service_img">
                     <img src="img/index/photo.png" alt="履歷健檢">
+                    </div>
                     <div class="service_content_text">
                         <h2 class="fs-28 fw-bold card_vector">履歷健檢</h2>
                         <p class="grey">履歷是打開機會之門的第一步。讓我協助你突顯專業技術與核心能力，並透過簡短模擬面試為你加分，讓面試官第一眼就被你吸引。</p>
                     </div>
                 </div>
                 <div class="service_content row-r">
+                    <div class="service_img">
                     <img src="img/index/photo2.png" alt="線上諮詢">
+                    </div>
                     <div class="service_content_text">
                         <h2 class="fs-28 fw-bold card_vector">線上諮詢</h2>
                         <p class="grey">想快速解決前端學習瓶頸，或需要專業職涯指引？透過線上一對一諮詢，我將協助你更有方向地邁進。</p>
                     </div>
                 </div>
                 <div class="service_content">
+                    <div class="service_img">
                     <img src="img/index/photo3.png" alt="網頁開發">
+                    </div>
                     <div class="service_content_text">
                         <h2 class="fs-28 fw-bold card_vector">網頁開發</h2>
                         <p class="grey">想打造高效能、具美感的網站？我提供從需求訪談到架構實作的一站式服務，讓你的品牌與產品在線上脫穎而出。</p>
                     </div>
                 </div>
                 <div class="service_content row-r">
+                    <div class="service_img">
                     <img src="img/index/photo4.png" alt="企業內訓">
+                    </div>
                     <div class="service_content_text">
                         <h2 class="fs-28 fw-bold card_vector">企業內訓</h2>
                         <p class="grey">想讓團隊快速掌握前端最新技術或優化現有專案流程？我可協助打造專業、實用的企業內訓課程，一次解決團隊痛點。</p>
