--- a/index.html
+++ b/index.html
@@ -66,37 +66,37 @@
                 <div  class="service">
                 <h2 class="index-title fw-bold mb-24 fs-64">專業服務與方案</h2>
                 <div class="service_content">
-                    <div class="service_img">
+                    <div data-aos="fade-up" class="service_img">
                     <img src="img/index/photo.png" alt="履歷健檢">
                     </div>
-                    <div class="service_content_text">
+                    <div data-aos="fade-up"data-aos-delay="300" class="service_content_text">
                         <h2 class="fs-28 fw-bold card_vector">履歷健檢</h2>
                         <p class="grey">履歷是打開機會之門的第一步。讓我協助你突顯專業技術與核心能力，並透過簡短模擬面試為你加分，讓面試官第一眼就被你吸引。</p>
                     </div>
                 </div>
                 <div class="service_content row-r">
-                    <div class="service_img">
+                    <div data-aos="fade-up"data-aos-delay="400" class="service_img">
                     <img src="img/index/photo2.png" alt="線上諮詢">
                     </div>
-                    <div class="service_content_text">
+                    <div data-aos="fade-up" data-aos-delay="500" class="service_content_text">
                         <h2 class="fs-28 fw-bold card_vector">線上諮詢</h2>
                         <p class="grey">想快速解決前端學習瓶頸，或需要專業職涯指引？透過線上一對一諮詢，我將協助你更有方向地邁進。</p>
                     </div>
                 </div>
                 <div class="service_content">
-                    <div class="service_img">
+                    <div data-aos="fade-up"data-aos-delay="400" class="service_img">
                     <img src="img/index/photo3.png" alt="網頁開發">
                     </div>
-                    <div class="service_content_text">
+                    <div data-aos="fade-up" data-aos-delay="500" class="service_content_text">
                         <h2 class="fs-28 fw-bold card_vector">網頁開發</h2>
                         <p class="grey">想打造高效能、具美感的網站？我提供從需求訪談到架構實作的一站式服務，讓你的品牌與產品在線上脫穎而出。</p>
                     </div>
                 </div>
                 <div class="service_content row-r">
-                    <div class="service_img">
+                    <div data-aos="fade-up"data-aos-delay="400" class="service_img">
                     <img src="img/index/photo4.png" alt="企業內訓">
                     </div>
-                    <div class="service_content_text">
+                    <div data-aos="fade-up" data-aos-delay="500" class="service_content_text">
                         <h2 class="fs-28 fw-bold card_vector">企業內訓</h2>
                         <p class="grey">想讓團隊快速掌握前端最新技術或優化現有專案流程？我可協助打造專業、實用的企業內訓課程，一次解決團隊痛點。</p>
                     </div>
@@ -220,14 +220,14 @@
                         <div class="img-box">
                             <img src="img/index/photo8.png" alt="職涯諮詢成功案例圖">
                         </div>
-                        <div class="text-box">
-                            <div class="text-card">
+                        <div  class="text-box">
+                            <div data-aos="fade-left" data-aos-delay="400" class="text-card">
                                 <p class="fw-bold card_vector">
                                     在職涯發展的關鍵轉折點上，適時的協助與正確的方向至關重要。藉由職涯諮詢，我可以幫助你加速釐清目標、建立更全面的技術與軟實力，並有效<span
                                         class="blue">突破原有的舒適圈</span>。
                                 </p>
                             </div>
-                            <div class="text-card-bottom">
+                            <div data-aos="fade-left" data-aos-delay="600" class="text-card-bottom">
                                 <p class="fw-bold card_vector">
                                     期待在下一個新機會中，我能與你一起攜手邁向更高峰！
                                 </p>
@@ -236,7 +236,9 @@
                         </div>
                     </div>
                     <ul class="success-stories">
-                        <li class="success-stories-card">
+                        <li data-aos="fade-up"
+                        data-aos-delay="400"
+     data-aos-anchor-placement="bottom-bottom" class="success-stories-card">
                             <img src="img/index/people.png" alt="無經驗到前端工程師 Offer">
                             <div>
                                 <h2 class="fs-24 fw-bold title">無經驗到前端工程師 Offer</h2>
@@ -253,7 +255,9 @@
                             <span class="hr"></span>
                             <div class="success-card"><a href="#">前往聆聽 podcast</a></div>
                         </li>
-                        <li class="success-stories-card">
+                        <li data-aos="fade-up"
+                        data-aos-delay="500"
+     data-aos-anchor-placement="bottom-bottom" class="success-stories-card">
                             <img src="img/index/people2.png" alt="轉職迷茫到明確學習規劃">
                             <div>
                                 <h2 class="fs-24 fw-bold title">轉職迷茫到明確學習規劃</h2>
@@ -270,7 +274,9 @@
                             <span class="hr"></span>
                             <div class="success-card"><a href="#">前往聆聽 podcast</a></div>
                         </li>
-                        <li class="success-stories-card">
+                        <li data-aos="fade-up"
+                        data-aos-delay="600"
+     data-aos-anchor-placement="bottom-bottom" class="success-stories-card">
                             <img src="img/index/people3.png" alt="面試緊張到從容應對">
                             <div>
                                 <h2 class="fs-24 fw-bold title">面試緊張到從容應對</h2>
@@ -287,7 +293,9 @@
                             <span class="hr"></span>
                             <div class="success-card"><a href="#">前往聆聽 podcast</a></div>
                         </li>
-                        <li class="success-stories-card">
+                        <li data-aos="fade-up"
+                        data-aos-delay="700"
+     data-aos-anchor-placement="bottom-bottom" class="success-stories-card">
                             <img src="img/index/people4.png" alt="面試緊張到從容應對">
                             <div>
                                 <h2 class="fs-24 fw-bold title">面試緊張到從容應對</h2>
@@ -452,5 +460,10 @@
     }
 });
     </script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+ AOS.init();
+</script>
 </body>
 </html>
